--- a/NAudioTest/NAudioTest.csproj
+++ b/NAudioTest/NAudioTest.csproj
@@ -78,7 +78,7 @@
     <Compile Include="MusicTools.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="PortamentoSineWaveProvider.cs" />
+    <Compile Include="WaveProvider.cs" />
     <Compile Include="WaveTables.cs" />
   </ItemGroup>
   <ItemGroup>
