--- a/NAudioTest/NAudioTest.csproj
+++ b/NAudioTest/NAudioTest.csproj
@@ -78,6 +78,7 @@
     <Compile Include="MusicTools.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SavingSampleProvider.cs" />
     <Compile Include="WaveProvider.cs" />
     <Compile Include="WaveTables.cs" />
   </ItemGroup>
