--- a/NAudioTest/NAudioTest.csproj
+++ b/NAudioTest/NAudioTest.csproj
@@ -76,6 +76,7 @@
     <Compile Include="AudioPlaybackEngine.cs" />
     <Compile Include="IOHandler.cs" />
     <Compile Include="MusicTools.cs" />
+    <Compile Include="NoteProvider.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SavingSampleProvider.cs" />
